Use Cursor Prompts to fix setup

--- a/style/_base.scss
+++ b/style/_base.scss
@@ -44,7 +44,10 @@ body, html {
 
   /**No selection except for input fields */
   :not(input):not(select):not(textArea) {
-    @include user-select(none);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     cursor: default;
   }
 
