--- a/style/component/_menu.scss
+++ b/style/component/_menu.scss
@@ -8,7 +8,7 @@
   &, * {
     /** Make everything based on border-box model */
     *, *:before, *:after {
-      @include box-sizing(border-box);
+      box-sizing: border-box;
     }
   }
 }
@@ -98,7 +98,7 @@
 
 /** Add tail arrow indicator to right and spacing if sub-menu and not root */
 .g-menu:not(.g-menu-root) > .g-menu-item-menu > span.g-menu-item-tail:before {
-  content:$fa-var-caret-right;
+  content: "\f0da"; /* FontAwesome caret-right */
 }
 
 /** Icon needs fixed width */
@@ -164,7 +164,7 @@
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  content:$fa-var-check;
+  content: "\f00c"; /* FontAwesome check */
 }
 
 /** Adjustments for menu bar */
