--- a/style/_contenteditable.scss
+++ b/style/_contenteditable.scss
@@ -5,7 +5,10 @@
   }
 
   &, * {
-    @include user-select(all);
+    -webkit-user-select: all;
+    -moz-user-select: all;
+    -ms-user-select: all;
+    user-select: all;
     cursor: auto;
   }
 
