--- a/style/_fonts.scss
+++ b/style/_fonts.scss
@@ -1,3 +1,3 @@
 // FontAwesome import
 $fa-font-path: 'font';
-@import '../bower_components/font-awesome/scss/font-awesome.scss';
+@import 'font-awesome/scss/fontawesome.scss';
