--- a/style/component/_panel.scss
+++ b/style/component/_panel.scss
@@ -2,7 +2,7 @@
 
 .g-panel {
   > .header {
-    @include box-sizing(border-box);
+    box-sizing: border-box;
     display: table;
     width: 100%;
     padding: 0px 5px;
