--- a/style/workspace/_panels.scss
+++ b/style/workspace/_panels.scss
@@ -1,7 +1,7 @@
 @import '../variables';
 
 #panels {
-  @include box-sizing(border-box);
+  box-sizing: border-box;
   position: absolute;
   bottom: 0px;
   height: 146px;
