--- a/style/workspace/_sidebars.scss
+++ b/style/workspace/_sidebars.scss
@@ -1,7 +1,7 @@
 @import '../variables';
 
 #sidebars {
-  @include box-sizing(border-box);
+  box-sizing: border-box;
   position: absolute;
   top: 0px;
   left: 0px;
